# Iot26_SDK

./: README.md  WIDGET_CONTROL_TRAITS.md
cpp/IoT26/: IoT26Client.cpp  IoT26Client.h  library.json
cpp/sensor_telemetry/: sensor_telemetry.ino
cpp/test_secure_mqtt/: IoT26Client.h  test_secure_mqtt.ino
cpp/widget_control_traits/: widget_control_traits.ino
dart/: pubspec.yaml
dart/.dart_tool/: package_config.json  package_graph.json
dart/.dart_tool/extension_discovery/: vs_code.json
dart/example/: main.dart  sensor_telemetry.dart  sensor_uplink.dart  widget_control_traits.dart
dart/lib/: iot26_client.dart
dart/lib/src/: iot26_models.dart  iot26_mqtt.dart
go/: go.mod  go.sum
go/example/: main.go
go/example/sensor_telemetry/: main.go
go/example/sensor_uplink/: main.go
go/example/widget_control_traits/: main.go
go/iot26client/: client.go  client_test.go
nodejs/: example.js  example_sensor_uplink.js  index.js  package.json  sensor_telemetry.js  widget_control_traits.js
python/: README.md  protocol_flow.html  pyproject.toml
python/examples/: run_i2c.py  run_modbus_rtu.py  run_modbus_tcp.py  run_mqtt_direct.py  run_one_wire.py  sensor_telemetry.py  sensor_uplink.py  widget_control_traits.py
python/iot26_edge/: __init__.py  client.py  gateway.py
python/iot26_edge/protocols/: __init__.py  analog.py  base.py  i2c.py  modbus.py  mqtt_direct.py  one_wire.py  spi.py
python/tests/: test_gateway.py
